--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -14,12 +14,12 @@ const navLinks = [
      Siempre la dejo arriba pa' que el usuario no se me pierda ni de broma -->
 <header class="absolute top-0 left-0 z-20 flex w-full items-start justify-between px-6 py-4">
   <!-- Aquí va el logo (a veces se pixelea, pero igual lo amo jeje) -->
-  <img src="../../public/logo.png"  alt="Logo" class="h-6 w-auto" />
+  <img src="/logo.png"  alt="Logo" class="h-6 w-auto" />
 
   <!-- El clásico botón del menú hamburguesa pa' móviles.
        Si no le pongo esto, nadie va a saber por dónde se abre el menú -->
   <button id="menuBtn" class="h-5 w-5">
-    <img src="../../public/menu.png" alt="Open menu" class="h-full w-full" />
+    <img src="/menu.png" alt="Open menu" class="h-full w-full" />
   </button>
 </header>
 
@@ -37,7 +37,7 @@ const navLinks = [
   <!-- El botón de cerrar (la X) nunca puede faltar.
        Imagínate quedar atrapado en un menú sin salida, qué feo jaja -->
   <button id="closeBtn" class="h-5 w-5 self-start">
-    <img src="../../public/x.png" alt="Close menu" class="h-full w-full" />
+    <img src="/x.png" alt="Close menu" class="h-full w-full" />
   </button>
 
   <!-- Aquí es donde recorro los links que definí arriba.
